// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App component > Render home page 1`] = `
<div>
  <h1>
    WAXDISC
  </h1>
  <nav>
    <ul>
      <li>
        <a
          data-discover="true"
          href="/"
        >
          Home
        </a>
      </li>
      <li>
        <a
          data-discover="true"
          href="/shop"
        >
          Shop
        </a>
      </li>
      <li>
        <a
          data-discover="true"
          href="/cart"
        >
          Cart
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`App component > Visit cart page 1`] = `
<div>
  <p>
    This will show the shopping cart
  </p>
</div>
`;

exports[`App component > Visit home page 1`] = `
<div>
  <h1>
    WAXDISC
  </h1>
  <nav>
    <ul>
      <li>
        <a
          data-discover="true"
          href="/"
        >
          Home
        </a>
      </li>
      <li>
        <a
          data-discover="true"
          href="/shop"
        >
          Shop
        </a>
      </li>
      <li>
        <a
          data-discover="true"
          href="/cart"
        >
          Cart
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`App component > Visit shop page 1`] = `
<div>
  <p>
    This will have the products
  </p>
</div>
`;
